fix: 제목 저장 시, 정규화 로직 추가(#205)